fix: Remove instagram in favor of email link. Remove overflow on auctions list

--- a/brave-snouts-frontend/src/app/features/auction-feature/auction/auction-list/auction-list.component.scss
+++ b/brave-snouts-frontend/src/app/features/auction-feature/auction/auction-list/auction-list.component.scss
@@ -16,6 +16,14 @@
             padding: 0.5rem;
         }
 
+        @media(max-width: 600px) {
+            #auctions {
+                overflow: unset;
+                max-height: unset;
+                padding: 0.5rem;
+            }
+        }
+
         #donate {
             padding: 0.5rem
         }
